--- a/index.html
+++ b/index.html
@@ -1,1 +1,111 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>KubeLife - Next-Level Hosting</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+    <!-- Header Section -->
+    <header>
+        <div class="header-container">
+            <img src="images/kublife_logo.png" alt="KubeLife Logo" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#tools">Tools</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Welcome to KubeLife</h1>
+            <p>Your next-level hosting platform built on cutting-edge technology for ultimate scalability, automation, and reliability.</p>
+            <a href="#contact" class="cta-button">Get Started</a>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2>About KubeLife</h2>
+            <p>At KubeLife, we provide high-performance hosting solutions powered by Kubernetes, Docker, Terraform, and more. Our platform ensures your applications are always available, scalable, and optimized.</p>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="features">
+        <div class="container">
+            <h2>Our Features</h2>
+            <div class="feature-list">
+                <div class="feature-card">
+                    <img src="images/feature-icon1.svg" alt="Scalability" class="feature-icon">
+                    <h3>Scalability</h3>
+                    <p>Effortlessly scale your infrastructure to meet the growing demands of your applications.</p>
+                </div>
+                <div class="feature-card">
+                    <img src="images/feature-icon2.svg" alt="Automation" class="feature-icon">
+                    <h3>Automation</h3>
+                    <p>Automate deployment, scaling, and management with Kubernetes and Terraform.</p>
+                </div>
+                <div class="feature-card">
+                    <img src="images/feature-icon3.svg" alt="Security" class="feature-icon">
+                    <h3>Security</h3>
+                    <p>Keep your data and applications secure with built-in security features and continuous monitoring.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Tools Section -->
+    <section id="tools" class="tools">
+        <div class="container">
+            <h2>The Tools We Use</h2>
+            <div class="tool-list">
+                <div class="tool-card">
+                    <h3>Kubernetes</h3>
+                    <p>We use Kubernetes for container orchestration to ensure high availability and easy scaling.</p>
+                </div>
+                <div class="tool-card">
+                    <h3>Docker</h3>
+                    <p>Docker enables consistent development and production environments for your applications.</p>
+                </div>
+                <div class="tool-card">
+                    <h3>Terraform</h3>
+                    <p>Manage your infrastructure as code with Terraform, enabling scalability and flexibility.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>If you have questions or need support, don't hesitate to reach out. We’re here to help.</p>
+            <form action="#" method="POST">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <div class="footer-container">
+            <p>&copy; 2024 KubeLife. All rights reserved. | <a href="#">Privacy Policy</a></p>
+        </div>
+    </footer>
+
+</body>
+</html>
