--- a/index.html
+++ b/index.html
@@ -56,36 +56,13 @@
       <p>We focus on delivering high-quality solutions for container management, automation, and monitoring. Our platform integrates Kubernetes with Docker and powerful CI/CD pipelines to accelerate your DevOps workflows. KubeLife makes it easy to automate tasks and scale applications seamlessly with enterprise-grade features.</p>
     </section>
 
-    <!-- Use Cases Section -->
-    <section class="use-cases">
-      <h2>Use Cases</h2>
-      <div class="use-cases-container">
-        <div class="use-case">
-          <h3>Cloud-Native Application Deployment</h3>
-          <p>Deploy applications in the cloud with ease, using Kubernetes clusters managed by KubeLife. Our tool helps you automate the setup and scaling of applications across multiple cloud environments.</p>
-        </div>
-        <div class="use-case">
-          <h3>Automated CI/CD Pipelines</h3>
-          <p>Integrate Docker and Kubernetes into your CI/CD pipelines to automate your software delivery process. Deploy, test, and release software faster and more reliably.</p>
-        </div>
-        <div class="use-case">
-          <h3>Microservices Architecture</h3>
-          <p>KubeLife enables you to design, deploy, and scale microservices architectures with ease. Benefit from Kubernetes features such as automated scaling, self-healing, and load balancing.</p>
-        </div>
-        <div class="use-case">
-          <h3>Real-Time Monitoring & Alerts</h3>
-          <p>Monitor your cloud infrastructure in real-time with AWS monitoring integrated directly into KubeLife. Get alerted on performance issues and optimize resource usage across multiple clouds.</p>
-        </div>
-      </div>
-    </section>
-
     <!-- Documentation Section -->
     <section class="documentation">
       <h2>Documentation</h2>
       <p>Welcome to the official documentation for KubeLife. Here you'll find everything you need to get started and make the most of the tool.</p>
 
       <h3>Installation Guide</h3>
-      <p>Follow the steps below to install KubeLife on your local machine or cloud infrastructure.</p>
+      <p>Follow the steps below to install KubeLife on your local machine or cloud infrastructure:</p>
       <ul>
         <li>Step 1: Clone the repository</li>
         <li>Step 2: Build the Docker image</li>
@@ -104,41 +81,105 @@
         <li>Can KubeLife run on multi-cloud environments?</li>
         <li>How do I integrate KubeLife with GitLab CI/CD?</li>
       </ul>
-    </section>
 
-    <!-- Pricing Section -->
-    <section class="pricing">
-      <h2>Pricing</h2>
-      <p>KubeLife offers several pricing options to suit different needs and scales.</p>
-      <div class="pricing-container">
-        <div class="pricing-plan">
-          <h3>Basic Plan</h3>
-          <p>Perfect for small-scale applications and individual developers.</p>
-          <p>$19/month</p>
-        </div>
-        <div class="pricing-plan">
-          <h3>Enterprise Plan</h3>
-          <p>For large-scale applications with enterprise-level support and features.</p>
-          <p>$199/month</p>
-        </div>
-      </div>
-    </section>
+      <h3>kubelife host - The Ultimate Web App Hosting Tool</h3>
+      <p><strong>Version:</strong> 1.0.0</p>
+      <p><strong>Author:</strong> Devesh Singh Rathore</p>
 
-    <!-- Contact Section -->
-    <section class="contact">
-      <h2>Contact Us</h2>
-      <p>For support or inquiries, feel free to reach out to us through any of the methods below.</p>
+      <h4>Introduction</h4>
+      <p>Welcome to kubelife host, the all-in-one solution for hosting your web applications effortlessly. Whether you're a developer looking to quickly spin up a static website or an administrator preparing for dynamic deployments, kubelife host has you covered.</p>
+      <p>This tool leverages the power of Docker and Docker Compose to deliver fast, reliable, and seamless hosting solutions. With an intuitive interface and robust automation, kubelife host transforms your hosting experience into a streamlined, hassle-free process.</p>
+
+      <h4>Why Choose kubelife host?</h4>
       <ul>
-        <li>Email: support@kubelife.com</li>
-        <li>Phone: +1 (800) 123-4567</li>
-        <li>Location: 123 Cloud Street, TechCity, USA</li>
+        <li>Ease of Use: Simplified commands for both beginners and experts.</li>
+        <li>Flexibility: Host static websites today, dynamic applications tomorrow.</li>
+        <li>Automation: Automatically generates and manages Docker configurations.</li>
+        <li>Customization: Configure ports, image names, and more to suit your needs.</li>
+        <li>Error Handling: Detailed prompts and validations ensure no deployment mistakes.</li>
+        <li>Future-Ready: Scalable architecture to support dynamic web applications.</li>
       </ul>
-    </section>
 
-    <!-- Footer Section -->
-    <footer class="footer">
-      <p>&copy; 2024 KubeLife. All rights reserved.</p>
-    </footer>
+      <h4>Key Features</h4>
+      <h5>1. Static Website Hosting</h5>
+      <p>Host lightweight static websites with:</p>
+      <ul>
+        <li>HTML-only apps</li>
+        <li>CSS-based designs</li>
+        <li>Combinations of HTML and CSS</li>
+      </ul>
+      <p>The tool automates:</p>
+      <ul>
+        <li>Creation of Dockerfile and docker-compose.yml files.</li>
+        <li>Validation of directories and critical files like index.html.</li>
+        <li>Deployment using Docker Compose with automatic build and start.</li>
+      </ul>
+
+      <h5>2. Dynamic Web Application Hosting (Coming Soon)</h5>
+      <p>Prepare to deploy complex dynamic applications in future updates.</p>
+
+      <h5>3. Port Management</h5>
+      <p>Fully customizable container and host ports. Built-in validation ensures correct configurations.</p>
+
+      <h5>4. Kubernetes Naming Compliance</h5>
+      <p>Ensures all process names meet Kubernetes naming conventions for compatibility with cloud-native platforms.</p>
+
+      <h5>5. Robust Validation</h5>
+      <ul>
+        <li>Prerequisite checks for Docker and Docker Compose.</li>
+        <li>File and directory validation to avoid deployment issues.</li>
+      </ul>
+
+      <h4>System Requirements</h4>
+      <p>Before using kubelife host, ensure the following are installed:</p>
+      <ul>
+        <li>Docker: Install Docker</li>
+        <li>Docker Compose: Install Docker Compose</li>
+      </ul>
+
+      <h4>How It Works</h4>
+      <p>Step 1: Run the Command</p>
+      <pre><code>kubelife host</code></pre>
+      <p>Step 2: Choose the Application Type</p>
+      <ul>
+        <li>1 for Static Website Hosting.</li>
+        <li>2 for Dynamic Web Application Hosting (Coming Soon).</li>
+      </ul>
+      <p>Step 3: Configure Deployment</p>
+      <ul>
+        <li>Enter your process name, ensuring it follows Kubernetes conventions.</li>
+        <li>Provide the directory path containing your web application files.</li>
+        <li>Choose the host and container ports for the application.</li>
+      </ul>
+      <p>Step 4: Automatic Deployment</p>
+      <p>The tool generates all necessary configurations (Dockerfile, docker-compose.yml) and deploys your application using Docker Compose.</p>
+      <p>Step 5: Access Your Application</p>
+      <pre><code>http://localhost:<host-port></code></pre>
+
+      <h4>Error Handling</h4>
+      <ul>
+        <li>Prerequisite Checks: If Docker or Docker Compose is missing, the tool exits with a detailed error message.</li>
+        <li>Process Name Validation: Ensures process names are Kubernetes-compliant.</li>
+        <li>Directory and File Validation: Checks for the presence of index.html in the specified directory.</li>
+        <li>Port Validation: Validates that port numbers are within the valid range (1–65535).</li>
+      </ul>
+
+      <h4>FAQs</h4>
+      <h5>Q1: What if Docker is not installed?</h5>
+      <pre><code>Docker is not installed. Please install Docker and try again.</code></pre>
+
+      <h5>Q2: Can I use this tool on Windows?</h5>
+      <p>Yes, as long as Docker and Docker Compose are installed and configured properly.</p>
+
+      <h5>Q3: What happens if I provide an invalid process name?</h5>
+      <pre><code>Invalid process name. It must contain lowercase alphanumeric characters, hyphens, and periods.</code></pre>
+
+      <h5>Q4: How can I change the port number?</h5>
+      <p>Ports can be customized during the configuration phase of the deployment.</p>
+
+      <h3>Support</h3>
+      <p>If you encounter any issues, please visit our support page or email us at <a href="mailto:support@kubelife.com">support@kubelife.com</a>.</p>
+    </section>
   </div>
 </body>
 </html>
