--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <script>
     // Create a scene
     const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0xeeeeee);
+    scene.background = new THREE.Color(0x1d3557);
 
     // Create a camera
     const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -111,9 +111,13 @@
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.getElementById("webgl-container").appendChild(renderer.domElement);
 
-    // Create a cube geometry and a material, then combine them into a mesh
+    // Create a rotating wireframe cube
     const geometry = new THREE.BoxGeometry();
-    const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+    const material = new THREE.MeshBasicMaterial({
+      color: 0x00ff00,
+      wireframe: true,
+      emissive: 0x00ff00,
+    });
     const cube = new THREE.Mesh(geometry, material);
     scene.add(cube);
 
@@ -133,6 +137,13 @@
     }
 
     animate();
+
+    // Handle resizing the window
+    window.addEventListener('resize', () => {
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+    });
   </script>
 
 </body>
