--- a/index.html
+++ b/index.html
@@ -1,150 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>KubeLife | Next-Level Hosting</title>
-  <link rel="stylesheet" href="styles.css">
-
-  <!-- Include Three.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="KubeLife: Revolutionizing Cloud Computing with Kubernetes and Docker">
+    <meta name="keywords" content="KubeLife, Kubernetes, Docker, CI/CD, Cloud Computing, DevOps, Prometheus, Grafana">
+    <meta name="author" content="Devesh Singh Rathore">
+    <title>KubeLife</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <div class="container">
-    <!-- Hero Section -->
-    <section class="hero">
-      <div class="hero-content">
-        <img src="images/logo.png" alt="KubeLife Logo" class="logo">
-        <h1>Welcome to KubeLife</h1>
-        <p>Your next-level solution for Kubernetes, CI/CD, AWS Monitoring, and Docker automation.</p>
-      </div>
-    </section>
-
-    <!-- Features Section -->
-    <section class="features">
-      <h2>Key Features</h2>
-      <div class="features-container">
-        <div class="feature">
-          <h3>Docker Integration</h3>
-          <p>Effortlessly deploy and manage applications with Docker, fully integrated into the KubeLife ecosystem.</p>
+    <header class="bg-dark text-white py-3">
+        <div class="container d-flex justify-content-between align-items-center">
+            <h1 class="logo">KubeLife</h1>
+            <nav>
+                <a href="#features" class="text-white me-3">Features</a>
+                <a href="#about" class="text-white me-3">About</a>
+                <a href="#documentation" class="text-white">Documentation</a>
+            </nav>
         </div>
-        <div class="feature">
-          <h3>Automated Kubernetes Setup</h3>
-          <p>Set up your Kubernetes clusters automatically with ease and scale as needed.</p>
-        </div>
-        <div class="feature">
-          <h3>CI/CD Pipelines</h3>
-          <p>Automate your code delivery process and deploy faster with integrated CI/CD pipelines.</p>
-        </div>
-        <div class="feature">
-          <h3>AWS Monitoring</h3>
-          <p>Monitor AWS infrastructure seamlessly and gain insights into the performance of your resources.</p>
-        </div>
-        <div class="feature">
-          <h3>Multi-Cloud Support</h3>
-          <p>Deploy and manage your infrastructure across AWS, Azure, and Google Cloud platforms with ease.</p>
-        </div>
-        <div class="feature">
-          <h3>Secure Container Management</h3>
-          <p>Manage your containers securely with automated security policies and real-time vulnerability scans.</p>
-        </div>
-      </div>
-    </section>
+    </header>
 
-    <!-- About Section -->
-    <section class="about">
-      <h2>About KubeLife</h2>
-      <p>KubeLife is a powerful automation tool that provides advanced Kubernetes orchestration using Docker. Designed for modern infrastructure needs, KubeLife helps you achieve maximum efficiency in deploying applications, managing clusters, and ensuring smooth operations.</p>
-      <p>We focus on delivering high-quality solutions for container management, automation, and monitoring. Our platform integrates Kubernetes with Docker and powerful CI/CD pipelines to accelerate your DevOps workflows. KubeLife makes it easy to automate tasks and scale applications seamlessly with enterprise-grade features.</p>
-    </section>
+    <main class="container my-5">
+        <!-- Hero Section -->
+        <section class="hero text-center" data-aos="fade-in">
+            <img src="images/logo.png" alt="KubeLife Logo" class="img-fluid mb-4">
+            <h1 class="hero-title">Welcome to KubeLife</h1>
+            <p class="hero-description">Revolutionizing Cloud Computing with Kubernetes and Docker</p>
+            <a href="#features" class="btn btn-primary mt-3">Explore Features</a>
+        </section>
 
-    <!-- Documentation Section -->
-    <section class="documentation">
-      <h2>Documentation</h2>
-      <p>Welcome to the official documentation for KubeLife. Here you'll find everything you need to get started and make the most of the tool.</p>
-      <h3>Installation Guide</h3>
-      <p>Follow the steps below to install KubeLife on your local machine or cloud infrastructure:</p>
-      <ul>
-        <li>Step 1: Clone the repository</li>
-        <li>Step 2: Build the Docker image</li>
-        <li>Step 3: Configure your Docker Compose file</li>
-        <li>Step 4: Run KubeLife and access the UI via localhost</li>
-      </ul>
+        <!-- Slider Section -->
+        <section class="slider-section mt-5" data-aos="fade-up">
+            <div class="slider-container position-relative">
+                <div class="slider d-flex">
+                    <div class="slide text-center p-5">
+                        <h2 class="slider-text">Automated Containerized Deployments</h2>
+                        <p>Scale your infrastructure seamlessly with Docker and Kubernetes.</p>
+                    </div>
+                    <div class="slide text-center p-5">
+                        <h2 class="slider-text">Continuous Integration/Continuous Deployment</h2>
+                        <p>Streamline your DevOps processes with Jenkins and GitLab CI.</p>
+                    </div>
+                    <div class="slide text-center p-5">
+                        <h2 class="slider-text">Monitoring and Logging</h2>
+                        <p>Real-time performance tracking using Prometheus and Grafana.</p>
+                    </div>
+                </div>
+                <div class="slider-controls position-absolute top-50 w-100 d-flex justify-content-between">
+                    <button class="prev btn btn-dark rounded-circle">&#10094;</button>
+                    <button class="next btn btn-dark rounded-circle">&#10095;</button>
+                </div>
+            </div>
+        </section>
 
-      <h3>Configuration Guide</h3>
-      <p>Learn how to configure KubeLife for your environment, including setting up your Kubernetes clusters, AWS integration, and CI/CD pipelines.</p>
+        <!-- Features Section -->
+        <section class="features mt-5" id="features">
+            <h2 class="section-title text-center" data-aos="fade-up">Core Features</h2>
+            <div class="features-container d-flex flex-wrap justify-content-around">
+                <div class="feature card bg-dark text-white p-3 m-2" data-aos="zoom-in">
+                    <h3>Docker Integration</h3>
+                    <p>Effortlessly deploy and manage applications with Docker, fully integrated into the KubeLife ecosystem.</p>
+                </div>
+                <div class="feature card bg-dark text-white p-3 m-2" data-aos="zoom-in">
+                    <h3>Advanced Kubernetes Management</h3>
+                    <p>Take full control of your container orchestration with Kubernetes, optimizing scalability and performance.</p>
+                </div>
+                <div class="feature card bg-dark text-white p-3 m-2" data-aos="zoom-in">
+                    <h3>CI/CD Automation</h3>
+                    <p>Automate your application lifecycle with Jenkins, ensuring continuous integration and deployment.</p>
+                </div>
+                <div class="feature card bg-dark text-white p-3 m-2" data-aos="zoom-in">
+                    <h3>Advanced Monitoring</h3>
+                    <p>Track metrics and logs in real time with Prometheus and visualize them using Grafana dashboards.</p>
+                </div>
+            </div>
+        </section>
 
-      <h3>FAQ</h3>
-      <p>Here are some frequently asked questions regarding KubeLife:</p>
-      <ul>
-        <li>What is KubeLife?</li>
-        <li>How do I deploy my first application?</li>
-        <li>Can KubeLife run on multi-cloud environments?</li>
-        <li>How do I integrate KubeLife with GitLab CI/CD?</li>
-      </ul>
+        <!-- About Section -->
+        <section class="about mt-5 p-5 bg-secondary text-white rounded" id="about" data-aos="fade-right">
+            <h2>About KubeLife</h2>
+            <p class="about-text">KubeLife is designed to streamline container orchestration, infrastructure management, and continuous deployment processes, making DevOps easier and more scalable.</p>
+        </section>
 
-      <h3>kubelife host - The Ultimate Web App Hosting Tool</h3>
-      <p><strong>Version:</strong> 1.0.0</p>
-      <p><strong>Author:</strong> Devesh Singh Rathore</p>
+        <!-- Documentation Section -->
+        <section class="documentation mt-5 p-5 bg-dark text-white rounded" id="documentation" data-aos="fade-left">
+            <h2>Documentation</h2>
+            <p class="doc-text">Visit our full documentation to explore more about deploying and managing containers, Kubernetes clusters, and CI/CD pipelines. <a href="#" class="text-primary">Read More</a></p>
+        </section>
 
-      <!-- The rest of the documentation continues here -->
+        <!-- Footer -->
+        <footer class="mt-5 bg-dark text-white text-center py-3">
+            <p>&copy; 2024 KubeLife. All Rights Reserved.</p>
+        </footer>
+    </main>
 
-    </section>
-
-  </div>
-
-  <!-- WebGL (Three.js) Canvas -->
-  <div id="webgl-container"></div>
-
-  <!-- Three.js script to initialize the 3D scene -->
-  <script>
-    // Create a scene
-    const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0x1d3557);
-
-    // Create a camera
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-
-    // Create a WebGL renderer
-    const renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.getElementById("webgl-container").appendChild(renderer.domElement);
-
-    // Create a rotating wireframe cube
-    const geometry = new THREE.BoxGeometry();
-    const material = new THREE.MeshBasicMaterial({
-      color: 0x00ff00,
-      wireframe: true,
-      emissive: 0x00ff00,
-    });
-    const cube = new THREE.Mesh(geometry, material);
-    scene.add(cube);
-
-    // Set the camera position
-    camera.position.z = 5;
-
-    // Animation loop to render the scene
-    function animate() {
-      requestAnimationFrame(animate);
-
-      // Rotate the cube
-      cube.rotation.x += 0.01;
-      cube.rotation.y += 0.01;
-
-      // Render the scene
-      renderer.render(scene, camera);
-    }
-
-    animate();
-
-    // Handle resizing the window
-    window.addEventListener('resize', () => {
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-    });
-  </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <script src="script.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
+
 </html>
+
