--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 </head>
 
 <body>
+    <!-- Background Video -->
+    <video autoplay loop muted id="background-video">
+        <source src="kubelife_background.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
     <header class="bg-dark text-white py-3">
         <div class="container d-flex justify-content-between align-items-center">
             <h1 class="logo">KubeLife</h1>
@@ -110,4 +116,3 @@
 </body>
 
 </html>
-
