--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p>Advanced monitoring and alerting for cloud infrastructure.</p>
                 </div>
                 <div class="tools-card">
-                    <img src="images/grafana.png" alt="Grafana" class="img-fluid mb-3" style="max-height: 80px;">
+                    <img src="images/grafana.png" alt="Grafana" class="img-fluid mb-3 small-img">
                     <h4>Grafana</h4>
                     <p>Visualize and analyze your cloud infrastructure metrics.</p>
                 </div>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card">
-                        <img src="images/docker.png" alt="Docker Basics" class="card-img-top">
+                        <img src="images/docker.png" alt="Docker Basics" class="card-img-top small-img">
                         <div class="card-body">
                             <h5 class="card-title">Docker and Kubernetes Basics</h5>
                             <p class="card-text">Get started with the fundamentals of containerization and orchestration.</p>
