--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
     </main>
 
     <footer class="bg-dark text-white text-center py-3">
+        <div class="footer-logo-container">
+            <img src="images/logo.png" alt="KubeLife Logo" class="footer-logo">
+        </div>
         <p>Founder: Devesh Singh Rathore | Email: <a href="mailto:deveshrathore13@gmail.com" class="text-primary">deveshrathore13@gmail.com</a></p>
     </footer>
 
