--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
             <h2>About KubeLife</h2>
             <img src="images/hero-image.jpg" alt="Hero Image" class="img-fluid my-4" style="border-radius: 8px; max-height: 300px;">
             <p><strong>Devesh Singh Rathore</strong> is the creator of KubeLife, a tool designed to revolutionize cloud computing using Kubernetes and Docker.</p>
+            <!-- Added button for 'View Documents' -->
+            <a href="/documents/documentation.html" class="btn btn-primary btn-lg mt-3">View Documents</a>
         </section>
 
         <!-- Documentation Section -->
@@ -92,8 +94,7 @@
                         <div class="card-body">
                             <h5 class="card-title">KubeLife Deployment</h5>
                             <p class="card-text">Deploy and manage your applications easily with KubeLife.</p>
-                            <!-- Updated link to the new documentation file in 'documents' folder -->
-                            <a href="documents/documentation.html" class="btn btn-primary">View Documentation</a>
+                            <a href="https://github.com/deveshrathore123/kubelife_server.git" class="btn btn-primary">View Documentation</a>
                         </div>
                     </div>
                 </div>
